<resources>

    <!--Firestore -->
    <string name="COLLECTION_NAME_USER"> users </string>
    <string name="COLLECTION_NAME_REAL_ESTATE"> real_estates </string>
    <string name="COLLECTION_NAME_SOLD_REAL_ESTATE"> sold_real_estates </string>
    <string name="COLLECTION_NAME_USER_SOLD_REAL_ESTATE"> user_sold </string>

    <!-- Preferences -->
    <string name="shared_preference_user_email"> EMAIL </string>
    <string name="shared_preference_username"> USERNAME </string>
    <string name="shared_preference_phone_number"> PHONE_NUMBER </string>
    <string name="shared_preference_language"> LANGUAGE </string>
    <string name="shared_preference_money"> MONEY </string>

    <!--Main Activity -->
    <string name="app_name">RealEstateManager</string>
    <string name="information_no_phone_number">Go to settings to manage your phone number</string>
    <string name="side_view_setting">SETTINGS</string>
    <string name="side_view_LOGOUT">LOGOUT</string>
    <string name="error_no_connection"> NO INTERNET</string>

    <string name="banner_email_not_verify"> Restricted use, because we need to check your email.\n Go to setting </string>

    <string name="title_alertDialog_google_play_service"> ERROR !!</string>
    <string name="message_alertDialog_google_play_service_download"> Please download the google play service</string>
    <string name="message_alertDialog_google_play_service_update"> Please update your google play service</string>
    <string name="positive_button_alertDialog_permission"> OK</string>

    <!-- Action bar -->
    <string name="actionbar_add"> Add </string>
    <string name="actionbar_edit"> Edit </string>
    <string name="actionbar_filter"> Filter </string>
    <string name="actionbar_sold"> Sold </string>
    <string name="actionbar_draft"> Create Draft</string>
    <string name="actionbar_delete_draft"> Delete Draft</string>

    <!-- Alert dialog profile picture -->
    <string name="alert_dialog_choice_files"> Files</string>
    <string name="alert_dialog_choice_camera"> Camera</string>
    <string name="alert_dialog_button_save"> Save</string>

    <!-- List View -->
    <string name="list_view_no_real_estate">No Real Estate</string>
    <string name="list_view_draft"> DRAFT</string>
    <string name="list_view_not_sync"> NOT SYNC</string>

    <!--Detail Fragment -->
    <string name="detail_media_category"> Media </string>
    <string name="detail_description_category"> Description </string>
    <string name="detail_type_category"> Type </string>
    <string name="detail_price"> Price </string>
    <string name="detail_surface"> Surface </string>
    <string name="detail_rooms"> Number of rooms </string>
    <string name="detail_bathrooms"> Number of bathrooms </string>
    <string name="detail_bedrooms"> Number of bedrooms </string>
    <string name="detail_location"> Location </string>
    <string name="detail_manager_category"> Manager </string>
    <string name="detail_no_information"> No Information</string>
    <string name="explain_call"> Sorry, we need your permission to call</string>

    <!-- Add new Real Estate -->
    <string-array name="SpinnerTypeOfResidence">
        <item>House</item>
        <item>Flat</item>
        <item>Duplex</item>
        <item>Penthouse</item>
    </string-array>
    <string name="detail_set_location_button"> Set Location</string>
    <string name="button_save"> Save </string>
    <string name="button_add_picture"> Add Picture </string>
    <string name="checkbox_main_picture"> Main Picture</string>
    <string name="detail_date_creation"> Creation date : </string>
    <string name="detail_date_sold"> Sold date :</string>

    <string name="new_title_alert_dialog"> Warning !!</string>
    <string name="new_message_alert_dialog"> Do you really want to abandon the creation of real estate ?</string>
    <string name="new_button_alert_dialog"> YES </string>
    <string name="new_toast_unable_to_save"> Unable to save </string>
    <string name="new_error_enter_data"> Enter Data</string>
    <string name="new_error_price_format"> Incorrect Format </string>

    <string name="new_title_alert_dialog_draft"> SAVE AS DRAFT !!</string>
    <string name="new_message_alert_dialog_draft"> Do you really want to save as draft this real estate ?</string>
    <string name="new_button_alert_dialog_draft"> YES </string>

    <string name="new_title_alert_dialog_delete_draft"> DELETE DRAFT !!</string>
    <string name="new_message_alert_dialog_delete_draft"> Do you really want to delete this draft ?</string>
    <string name="new_button_alert_dialog_delete_draft"> YES </string>

    <string name="title_message_sold_real_estate"> Caution </string>
    <string name="message_sold_real_estate"> Are you sure you want to mark this property as \"sold\" ?</string>
    <string name="message_cancel_sold_real_estate"> Are you sure you want to cancel the sale of this property ?</string>
    <string name="button_message_sold_real_estate"> Sure </string>

    <!-- MapView -->
    <string name="title_message_map_view"> We are Sorry </string>
    <string name="message_map_view"> We need to access to your location to show you the map.\nDo you want to grant us this permission</string>
    <string name="button_message_map_view"> OK</string>

    <string name="title_alertDialog_error_location"> We are Sorry </string>
    <string name="message_alertDialog_error_location"> We were unable to locate you</string>

    <string name="legend_sync_list"> Sync </string>
    <string name="legend_no_sync_list"> No Sync</string>
    <string name="legend_draft_list"> Draft </string>

    <!-- Filter -->
    <string name="filter_more_filter">More Filter</string>
    <string name="filter_less_filter">Less Filter</string>
    <string name="filter_is_next_school">Next to School </string>
    <string name="filter_is_next_park">Next to Park </string>
    <string name="filter_is_next_store">Next to Store </string>
    <string name="filter_is_mine">My Real Estate </string>
    <string name="filter_is_sold">Only Sold Real Estate </string>
    <string name="filter_price_price">Price : </string>
    <string name="filter_price_min">Min : </string>
    <string name="filter_price_max">Max : </string>
    <string name="filter_location_city">City : </string>
    <string name="filter_hint_location"> City </string>
    <string name="filter_without_draft"> Without draft</string>
    <string name="filter_without_no_sync"> Without no sync</string>
    <string name="filter_all_type"> All type</string>

    <array name="Spinner_room">
        <item>Room : 1 or more</item>
        <item>Room : 2 or more</item>
        <item>Room : 3 or more</item>
    </array>

    <array name="Spinner_creation_date">
        <item>All publication date</item>
        <item>Last months</item>
        <item>Last 2 months</item>
        <item>Last 3 months</item>
    </array>

    <array name="Spinner_sold_date">
        <item>All sold date</item>
        <item>Last months</item>
        <item>Last 2 months</item>
        <item>Last 3 months</item>
    </array>

    <array name="Spinner_picture">
        <item>Picture : 1 or more</item>
        <item>Picture : 2 or more</item>
        <item>Picture : 3 or more</item>
    </array>

    <string name="filter_to_string_type"> Type :</string>
    <string name="filter_to_string_min"> Min :</string>
    <string name="filter_to_string_max"> Max :</string>
    <string name="filter_to_string_more_than"> More than </string>
    <string name="filter_to_string_room"> Room </string>
    <string name="filter_to_string_my_real_estates"> My real estates </string>
    <string name="filter_to_string_only_sold"> Only sold </string>
    <string name="filter_to_string_only_sold_last"> Only sold last </string>
    <string name="filter_to_string_months"> months </string>
    <string name="filter_to_string_only_published_last"> Only published last </string>
    <string name="filter_to_string_pictures"> pictures </string>
    <string name="filter_to_string_without_draft"> Without drafts </string>
    <string name="filter_to_string_without_not_sync"> Without not sync </string>

    <!-- Setting -->
    <string name="preferences_general"> General </string>
    <string name="preferences_languages"> Languages </string>
    <string name="preferences_money"> Money </string>
    <string name="preferences_personal"> Personal information </string>
    <string name="preferences_name"> Name </string>
    <string name="preferences_your_actual_name"> Your actual name is </string>
    <string name="preference_name_title_alert"> Your Name</string>
    <string name="preference_name_message_alert"> Enter Your Complete Name</string>
    <string name="preferences_phone_number"> Phone number </string>
    <string name="preferences_your_actual_phone_number"> Your actual phone number is </string>
    <string name="preference_phone_title_alert"> Your Phone Number</string>
    <string name="preference_phone_message_alert"> Enter Your Phone Number</string>
    <string name="preferences_account"> Account </string>
    <string name="preferences_verify_email"> Send Verification Email </string>
    <string name="preferences_remove_account"> Remove account </string>

    <string name="setting_account_title_alert"> Remove Account </string>
    <string name="setting_account_message_alert"> Are you sure you want to delete your account ? </string>
    <string name="setting_account_button_alert"> remove </string>


    <string name="setting_email_title_alert"> Verification Email </string>
    <string name="setting_email_message_alert_start"> If you continue, an email will be sent to </string>
    <string name="setting_email_message_alert_finish"> , and you will be disconnected. \nPlease check your email (and spam) and log in again.  </string>
    <string name="setting_email_button_alert"> Continue ? </string>

    <string name="toast_need_connection"> Sorry we need internet for that </string>

    <string-array name="language">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string-array name="language_key">
        <item>en</item>
        <item>fr</item>
    </string-array>
    <string-array name="money">
        <item>Dollar USD</item>
        <item>Euro EUR</item>
    </string-array>
    <string name="money_key_dollar"> USD</string>
    <string name="money_key_euro"> EUR</string>

    <!-- Notification -->
    <string name="notification_channel_name"> RealEstateManager</string>
    <string name="notification_channel_description"> Your RealEstate is online </string>
    <string name="notification_title_finish"> RealEstateManager - Completed </string>
    <string name="notification_title_unfinish"> RealEstateManager - Upload </string>
</resources>