<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:title="@string/preferences_general"
        android:key="@string/preferences_general">

        <androidx.preference.ListPreference
            android:key="@string/preferences_languages"
            android:title="@string/preferences_languages"
            android:entries="@array/language"
            android:entryValues="@array/language"/>

        <androidx.preference.ListPreference
            android:key="@string/preferences_money"
            android:title="@string/preferences_money"
            android:entries="@array/money"
            android:entryValues="@array/money"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preferences_personal"
        android:key="@string/preferences_personal">

        <androidx.preference.EditTextPreference
            android:key="@string/preferences_name"
            android:title="@string/preferences_name"
            android:dialogTitle="@string/preference_name_title_alert"
            android:dialogMessage="Enter Your Complete Name"/>

        <androidx.preference.EditTextPreference
            android:key="@string/preferences_phone_number"
            android:title="@string/preferences_phone_number"
            android:dialogTitle="@string/preference_phone_title_alert"
            android:dialogMessage="@string/preference_phone_message_alert"
            android:inputType="textPassword"/>

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/preferences_account"
        android:key="@string/preferences_account">

        <androidx.preference.Preference
            android:key="@string/preferences_remove_account"
            android:title="@string/preferences_remove_account"/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>