<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_add_black_24dp"
        app:iconTint="@color/white"
        android:title="@string/actionbar_add" />
    <item
        android:id="@+id/edit_menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_edit_black_24dp"
        app:iconTint="@color/white"
        android:title="@string/actionbar_edit" >
        <menu>
            <item
                android:id="@+id/go_to_edit"
                android:icon="@drawable/ic_edit_black_24dp"
                android:title="@string/actionbar_edit" />
            <item
                android:id="@+id/sold_item"
                android:icon="@drawable/ic_dollar"
                android:title="@string/actionbar_sold" />
        </menu>
    </item>
    <item
        android:id="@+id/filter_menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_filter_24dp"
        app:iconTint="@color/white"
        android:title="@string/actionbar_filter" />

</menu>