<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateOrEditRealEstateActivity">

    <ImageView
        android:id="@+id/detail_image_sold_banner"
        android:layout_width="@dimen/detail_sold_banner_size"
        android:layout_height="@dimen/detail_sold_banner_size"
        android:scaleType="centerCrop"
        android:layout_alignParentEnd="true"
        android:src="@drawable/sold_banner" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/detail_linear_layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/detail_margin_category"
                android:text="@string/detail_media_category"
                android:textStyle="bold" />

            <include
                layout="@layout/include_real_estate_picture"
                />

            <Button
                android:id="@+id/add_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/detail_margin_add_picture_button"
                android:text="@string/button_add_picture"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/detail_margin_category"
                android:text="@string/detail_description_category"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/detail_margin_category"
                android:hint="@string/detail_description_category" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/detail_margin_category">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/detail_margin_information"
                    android:src="@drawable/ic_room" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_type_category"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/input_spinner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/SpinnerTypeOfResidence"
                    android:layout_marginBottom="@dimen/detail_margin_information"
                    android:layout_row="1"
                    android:layout_column="1"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_marginEnd="@dimen/detail_margin_information"
                    android:src="@drawable/ic_price" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_price"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_margin_information"
                    android:inputType="number"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:hint="@string/detail_price" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_marginEnd="@dimen/detail_margin_information"
                    android:src="@drawable/ic_surface" />

                <TextView
                    android:id="@+id/detail_surface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_surface"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_surface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/detail_margin_information"
                    android:inputType="number"
                    android:layout_row="5"
                    android:layout_column="1"
                    android:hint="@string/detail_surface" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="4"
                    android:src="@drawable/ic_room" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_rooms"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_row="1"
                    android:layout_column="5"
                    android:hint="@string/detail_rooms" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="4"
                    android:src="@drawable/ic_bathroom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_bathrooms"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_bathroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_row="3"
                    android:layout_column="5"
                    android:hint="@string/detail_bathrooms" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="4"
                    android:src="@drawable/ic_bedroom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_bedrooms"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/input_bedroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_row="5"
                    android:layout_column="5"
                    android:hint="@string/detail_bedrooms" />

            </GridLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/detail_margin_information"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_location"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textview_result_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_margin_category"/>

            <FrameLayout
                android:id="@+id/host_mini_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/detail_margin_set_location_button"
                android:text="@string/detail_set_location_button"/>

            <Button
                android:id="@+id/new_element_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/detail_margin_save_button"
                android:layout_marginBottom="@dimen/detail_margin_save_button"
                android:text="@string/button_save" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>